attempt overflow hidden issue

--- a/style/about.css
+++ b/style/about.css
@@ -84,6 +84,7 @@ li {
   height: 7rem;
   border: 2px solid #e0e0e0;
   border-radius: 50%;
+  -webkit-overflow: hidden;
   overflow: hidden;
 }
 
@@ -93,9 +94,8 @@ li {
   height: 9rem;
   display: block;
   background-color: #e0e0e0;
-  position: absolute;
+  position: relative;
   border-radius: 45%;
-  bottom: -20%;
   left: -20%;
   -webkit-animation: spin 1.5s ease-in-out forwards;
           animation: spin 1.5s ease-in-out forwards;
