--- a/style/vx.css
+++ b/style/vx.css
@@ -84,6 +84,7 @@ li {
   height: 7rem;
   border: 2px solid #e0e0e0;
   border-radius: 50%;
+  -webkit-overflow: hidden;
   overflow: hidden;
 }
 
@@ -93,9 +94,8 @@ li {
   height: 9rem;
   display: block;
   background-color: #e0e0e0;
-  position: absolute;
+  position: relative;
   border-radius: 45%;
-  bottom: -20%;
   left: -20%;
   -webkit-animation: spin 1.5s ease-in-out forwards;
           animation: spin 1.5s ease-in-out forwards;
@@ -674,38 +674,36 @@ li {
   }
   /*Scroll Icon*/
   .scrollicon {
-    width: 24px;
-    height: 48px;
+    width: 20px;
+    height: 42px;
   }
   .scrollicon:before {
-    top: 20px;
+    top: 28px;
     width: 5px;
     height: 5px;
     border-radius: 50%;
+    -webkit-animation-duration: 1.5s;
+            animation-duration: 1.5s;
   }
   @-webkit-keyframes scroll {
     0% {
-      opacity: 0;
-    }
-    25% {
-      opacity: 1;
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
     }
     100% {
-      -webkit-transform: translateY(22px);
-              transform: translateY(22px);
+      -webkit-transform: translateY(-22px);
+              transform: translateY(-22px);
       opacity: 0;
     }
   }
   @keyframes scroll {
     0% {
-      opacity: 0;
-    }
-    25% {
-      opacity: 1;
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
     }
     100% {
-      -webkit-transform: translateY(22px);
-              transform: translateY(22px);
+      -webkit-transform: translateY(-22px);
+              transform: translateY(-22px);
       opacity: 0;
     }
   }
@@ -743,7 +741,7 @@ li {
 @media screen and (max-width: 450px) {
   /*Gloabal style*/
   h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
   h4 {
     font-size: 12px;
